# Aura

./: .agent_rules  .gitignore  README.md  ai_rules.md  client_project_plan.md  project_plan.md  research_prompts.md  test.md
.github/workflows/: deploy-backend.yml
apps/core/: .env.example  .gcloudignore  Dockerfile  cloudbuild.yaml  database.py  database_supabase.py  dependencies.py  fix_permissions.sql  fix_permissions_robust.sql  force_superadmin.sql  main.py  match_schema.sql  migration_event_temp_ttl.sql  migration_usage_tracking.sql  multitenant_schema.sql  processor.py  pytest.ini  requirements.txt  schemas.py  seed_data.sql  supa_schema.sql  test_processor.py
apps/core/migrations/: 006_multi_org_admin.sql  02_add_preferences.sql
apps/core/routers/: admin.py  auth.py  owner.py  photos.py  profile.py  superadmin.py
apps/core/tests/: test_api.py  test_database.py  test_feature_switch.py  test_integration_extra.py  test_invite_endpoint.py  test_phase6.py  test_processor.py
apps/desktop/: pnpm-lock.yaml
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: db.rs  lib.rs  scanner.rs  sync.rs  tests.rs  watcher.rs
apps/sync-agent/: package.json  pnpm-lock.yaml
apps/sync-agent/src/: App.tsx  index.css
apps/sync-agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/sync-agent/src-tauri/src/: hash.rs  main.rs  queue.rs  sync_worker.rs  trash_manager.rs  watcher.rs
apps/web/: jest.config.js  jest.setup.ts  next.config.ts  package.json  pnpm-lock.yaml
apps/web/__tests__/app/: page.test.tsx
apps/web/__tests__/app/admin/: page.test.tsx
apps/web/__tests__/app/admin/sources/: page.test.tsx
apps/web/__tests__/app/admin/trash/: page.test.tsx
apps/web/__tests__/app/api/convert-permanent/: route.test.ts
apps/web/__tests__/app/api/optimize/: route.test.ts
apps/web/__tests__/app/gallery/: page.test.tsx
apps/web/__tests__/components/: CameraConnect.test.tsx  CameraView.test.tsx  GalleryView.test.tsx  PhotoGallery.test.tsx  ScannerButton.test.tsx  StatusFooter.test.tsx  VoidBackground.test.tsx
apps/web/__tests__/hooks/: useCamera.test.ts
apps/web/src/__tests__/components/: StudioSwitcher.test.tsx
apps/web/src/__tests__/hooks/: useAdminAuth.test.ts
apps/web/src/app/: globals.css  page.tsx
apps/web/src/app/admin/: layout.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/scan/: page.tsx
apps/web/src/app/superadmin/: page.tsx
apps/web/src/components/: CameraConnect.tsx  CameraView.tsx  GalleryView.tsx  HealthCheck.tsx  PhotoGallery.tsx  ScannerButton.tsx  StatusFooter.tsx  StudioSwitcher.tsx  ThemeProvider.tsx  VoidBackground.tsx
apps/web/src/hooks/: useAdminAuth.ts  useCamera.ts  useOrganization.ts  useUserProfile.ts
apps/web/src/lib/: db.ts  imageUtils.ts  supabase.ts
apps/web/src/utils/: auth.ts
data/: bundles.json
docs/: admin-guide.md  deployment.md  run_instructions.md  security_audit.md  sync-agent-manual.md  test_credentials.md
scripts/: check_health.sh
(+19 files in other folders)
