[package]
name = "aura-desktop"
version = "0.1.0"
description = "Aura Desktop - Offline-First Photo Sync Agent"
authors = ["Aura Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aura_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Phase 7: Core Dependencies
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
rusqlite = { version = "0.35", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
image = "0.25"
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# ONNX Runtime for local AI (optional, enabled via feature)
[features]
ai = ["ort"]

[dev-dependencies]
uuid = { version = "1.20.0", features = ["v4"] }

[dependencies.ort]
version = "2.0.0-rc.11"
optional = true
