[package]
name = "aura-sync-agent"
version = "1.0.0"
description = "Aura Photo Sync Agent - Desktop application for local-cloud synchronization"
authors = ["Leul Tewodros"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "7.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4"
chrono = "0.4"
dirs = "6.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
