[package]
name = "aura-sync-agent"
version = "1.0.0"
description = "Aura Photo Sync Agent - Desktop application for local-cloud synchronization"
authors = ["Leul Tewodros"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "7.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4"
chrono = "0.4"
dirs = "6.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "multipart", "json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
mime_guess = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
